--- a/EMP.Website/ClientApp/src/styles.scss
+++ b/EMP.Website/ClientApp/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+//@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import './css/eqm.css';
+@import './css/responsive.css';
+
+/* Importing Bootstrap SCSS file. */
+//@import '../node_modules/bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
