[+]add datepick component [+]add main page

--- a/EMP.Website/ClientApp/src/app/modules/core/header/header.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/core/header/header.component.html
@@ -2,7 +2,7 @@
     <div class = "wrap">
         <section class="logo-eqp">
             <div class="logo">
-                <a href="#">EQP</a>
+                <a href="#">EMP</a>
             </div>
         </section>
 
