--- a/EMP.Website/ClientApp/src/app/app.component.html
+++ b/EMP.Website/ClientApp/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+
+<article>
+    <div class ="wrap">
+      <div class="article-container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </article>
+
+
+
