--- a/EMP.Website/ClientApp/src/styles.scss
+++ b/EMP.Website/ClientApp/src/styles.scss
@@ -8,6 +8,4 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
-
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css'
