--- a/EMP.Website/ClientApp/src/app/modules/shared/ng-bootstrap/ngb-datepicker/ngb-datepicker.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/shared/ng-bootstrap/ngb-datepicker/ngb-datepicker.component.html
@@ -6,6 +6,7 @@
         [(ngModel)]="model"
         ngbDatepicker
         #d="ngbDatepicker"
+        [readonly]="true"
     />
     <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
 </div>
