--- a/EMP.Website/ClientApp/src/app/modules/home/pages/main/main.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/home/pages/main/main.component.html
@@ -25,8 +25,12 @@
                 #fileUpload
                 [inputApiUrl] = "uploadApiURL"
                 (outputUploadInfo) = "FileUpload($event)"
-                (startUpload) = "setLoading($event)"
+                (outputUploadStatus) = "setLoading($event)"
                 ></app-upload>
+
+                <div>
+                  <span style="color: black;" class="badge badge-secondary">{{uploadedInfoMsg}}</span>
+              </div>
             </div>
 
             <!-- <div class="col-md-6">
