[+]add UI footer

--- a/EMP.Website/ClientApp/src/app/modules/core/footer/footer.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/core/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer>
+    <div class="wrap copyright">    
+        <span id="labCopyright">©ASUS Layout-CAE. All rights reserved.(建議使用 Edge 瀏覽器)</span>
+        <span style= "display:block">Layout-CAE專線#26841.</span>
+      </div>
+</footer>
