--- a/EMP.Website/ClientApp/src/app/modules/home/pages/main/main.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/home/pages/main/main.component.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="col-12">
-                <label class="form-label">PNs</label>
+                <label class="form-label">PNs：</label>
                 <input name = "txtPNs" type="text" class="form-control" placeholder="多PN請以;分隔" [(ngModel)]="pns">
               </div>
 
