--- a/EMP.Website/ClientApp/src/css/eqm.css
+++ b/EMP.Website/ClientApp/src/css/eqm.css
@@ -1,3 +1,5 @@
+
+
 html, body {
   --bs-body-bg: #d2e7ef;
 }
@@ -50,6 +52,31 @@ header {
     text-decoration: none;
     background: url(../assets/logo.png) no-repeat;
   }
+
+/*Footer-----------------------------------------*/
+
+footer {
+  position: relative;
+  padding: 0;
+  left: 0;
+  width: 100%;
+  background-color: #444;
+  clear: both;
+  min-width: 1170px;
+}
+
+footer {
+  min-width: 100%;
+}
+
+footer .copyright {
+  padding: 15px 0;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  color: #fff;
+  overflow: hidden;
+}
 
 
  /*個人相關事項*/
