--- a/EMP.Website/ClientApp/src/css/responsive.css
+++ b/EMP.Website/ClientApp/src/css/responsive.css
@@ -5,6 +5,12 @@
         box-sizing: border-box;
         -moz-box-sizing: border-box; 
         }
+
+    footer .wrap {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     .logo-eqp{
         width: auto;
         border-right: none;
