[*]update angular.json architect:builder [+]add package.json scripts:build-vt02. build-vt01. prod [*]add article wrap css style

--- a/EMP.Website/ClientApp/src/css/eqm.css
+++ b/EMP.Website/ClientApp/src/css/eqm.css
@@ -4,6 +4,11 @@ html, body {
   --bs-body-bg: #d2e7ef;
 }
 
+.wrap{
+  width: 1160px;
+  margin: 0 auto;
+}
+
 /*Header-----------------------------------------*/
 header {
     position: absolute;
@@ -93,7 +98,7 @@ footer .copyright {
 
   article {
     position: relative;
-    min-height: calc(100vh - 173px);
+    min-height: calc(100vh - 145px);
     padding: 0;
   }
 
