[+]add header userinfo section [+]add awesome icon

--- a/EMP.Website/ClientApp/src/app/modules/core/header/header.component.html
+++ b/EMP.Website/ClientApp/src/app/modules/core/header/header.component.html
@@ -6,8 +6,21 @@
             </div>
         </section>
 
-        <!-- <section class="user">
-            <span class="dropdown"></span>
-        </section> -->
+        <section class="user">
+            <span class="dropdown">
+              <span class="fa fa-user fa-fw"></span>
+              <h3>{{userName}}</h3>
+
+              <!-- <a class="dropdown-toggle" data-bs-toggle="dropdown">
+                <span class="fa fa-user fa-fw"></span>
+                <h3>Homer_Chen(陳威豪)</h3>
+              </a> -->
+              <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul> -->      
+            </span>
+          </section>
     </div>
 </header>
