--- a/EMP.Website/ClientApp/src/styles.scss
+++ b/EMP.Website/ClientApp/src/styles.scss
@@ -8,5 +8,5 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
-@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css'
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
 
